# convo-tools

./: .PLAN.md  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  graph.py  join_conversations.py  pyproject.toml  split_conversations.py
.github/workflows/: ci.yml
docs/: SPEC.md
src/convo_tools/: __init__.py  __main__.py  _builder.py  _centrality.py  _depth.py  _derived.py  _diff.py  _embed.py  _embeddings.py  _export.py  _extract.py  _graph_db.py  _ingest.py  _join.py  _ontology.py  _query.py  _semantic.py  _serve.py  _similarity.py  _split.py  _temporal.py  _timeline.py  _topics.py  _util.py  spacy_lang.yaml
tests/: conftest.py  test_builder.py  test_builder_integration.py  test_centrality.py  test_depth.py  test_diff.py  test_embed.py  test_export.py  test_export_integration.py  test_extract.py  test_extract_integration.py  test_ingest.py  test_join.py  test_main.py  test_query.py  test_query_integration.py  test_semantic.py  test_serve.py  test_similarity.py  test_split.py  test_temporal.py  test_timeline.py  test_topics.py
tools/: release.sh
